k3s/apps/onyx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onyx
  labels:
    app.kubernetes.io/name: onyx
